<resources>
    <string name="app_name">TurningPoint</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="text">Here, we use the “View” tag to create a rectangle with a very small width such that it becomes a vertical line. In the above code, a red vertical line of height ‘560dp’ and width ‘2dp’ is drawn which is at a left margin of ‘175dp’ from the left side of</string>
</resources>